Add support for MovieDB

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -86,6 +86,7 @@ crashlytics-build.properties
 fabric.properties
 ### Gradle template
 .gradle
+/gradle.properties
 
 # Ignore Gradle GUI config
 gradle-app.setting
