--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".MovieDetailActivity">
         </activity>
+
+        <service android:enabled="true" android:name=".service.MoviesSyncService" />
     </application>
 
 </manifest>
